# qjanno

./: .gitignore  CHANGELOG.md  CHANGELOGRELEASE.md  LICENSE  README.md  cabal.project  qhs.cabal  qjanno-hs.cabal  qjanno.cabal  stack.yaml
.github/workflows/: main.yml  mastodon.yml  release.yml  stylishHaskell.yml
src/: File.hs  Janno.hs  Main.hs  Option.hs  Parser.hs  SQL.hs  SQLType.hs
src-executables/: Main.hs
src/Qjanno/: File.hs  Janno.hs  Option.hs  Parser.hs  SQL.hs  SQLType.hs
test/: FileSpec.hs  MainSpec.hs  ParserSpec.hs  SQLSpec.hs
test/tests/: avg.sh  avg_sum.out  avg_sum.sh  basic.out  basic.sh  columns.out  columns.sh  concat.sh  count.sh  file_spaces.out  file_spaces.sh  group.out  group.sh  group_sum.out  group_sum.sh  gzip.sh  gzip_stdin.sh  header.sh  invalid.sh  is_null.sh  join.sh  multiline.out  multiline.sh  not_null.sh  output_delimiter.sh  output_header.out  output_header.sh  query_file.sh  quote.sh  seq.sh  spaces.sh  stdin.out  stdin.sh  sum.sh  tab.sh  tab2.sh  tab_delimited_output.sh  where.sh
test/tests/basic/: avg.sh  avg_sum.sh  basic.out  basic.sh  columns.sh  concat.out  concat.sh  count.out  count.sh  empty_query.out  empty_query.sh  empty_query_file.sh  file_spaces.sh  group.out  group.sh  group_sum.sh  is_null.out  is_null.sh  join.out  join.sh  multiline.sh  not_null.out  not_null.sh  output_header.sh  query_file.sh  quote.sh  seq.out  spaces.out  spaces.sh  stdin.sh  sum.sh  tab.out  tab.sh  tab2.sh  tab_delimited_output.out  tab_delimited_output.sh  where.sh
test/tests/poseidon/: janno_column_order.out  janno_column_order.sh  janno_d.sh  janno_d_da_j.sh  janno_d_da_j_full.out  janno_d_da_j_full.sh  janno_d_ext_ext.sh  janno_da.sh  janno_ext.out  janno_ext.sh  janno_j.out  janno_j.sh  show_columns.out  show_columns.sh
test/tests/poseidon/data/: column_order_test.janno
