name:                   qjanno-hs
version:                1.0.1
author:                 itchyny <https://github.com/itchyny>, Clemens Schmid
maintainer:             Clemens Schmid <clemens@nevrome.de>
license:                MIT
license-file:           LICENSE
category:               Console
build-type:             Simple
cabal-version:          >=1.10
synopsis:               Command line tool qjanno, SQL queries on .janno (and arbitrary CSV and TSV) files.
description:            This is an adjusted version and fork of the qsh package (https://github.com/itchyny/qhs).
extra-source-files:     README.md,
                        CHANGELOG.md

library
  hs-source-dirs:       src
  exposed-modules:      Qjanno.Parser
                      , Qjanno.SQL
                      , Qjanno.SQLType
                      , Qjanno.File
                      , Qjanno.Option
                      , Qjanno.Janno
  other-modules:        Paths_qjanno_hs
  default-language:     Haskell2010
  build-depends:        base >= 4.9 && < 5
                      , containers
                      , optparse-applicative
                      , simple-sql-parser >= 0.6.0
                      , sqlite-simple
                      , syb >= 0.4
                      , text
                      , directory
                      , filepath
                      , parsec
                      , aeson
                      , yaml

executable qjanno
  hs-source-dirs:       src-executables
  main-is:              Main.hs
  ghc-options:          -threaded -Wall
  default-language:     Haskell2010
  build-depends:        base >= 4.9 && < 5
                      , qjanno-hs
                      , containers
                      , optparse-applicative
                      , sqlite-simple
                      , table-layout
  other-modules:        Paths_qjanno_hs

test-suite spec
  hs-source-dirs:       test
  main-is:              Spec.hs
  other-modules:        ParserSpec
                      , SQLSpec
                      , FileSpec
                      , MainSpec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  build-depends:        base >= 4.9 && < 5
                      , qjanno-hs
                      , containers
                      , hspec
                      , process

source-repository head
  type:     git
  location: git@github.com:poseidon-framework/qjanno.git
