name:                   qjanno
version:                0.1.0
author:                 itchyny <https://github.com/itchyny>, Clemens Schmid
maintainer:             Clemens Schmid <clemens@nevrome.de>
license:                MIT
license-file:           LICENSE
category:               Console
build-type:             Simple
cabal-version:          >=1.10
synopsis:               Command line tool qjanno, SQL queries on .janno (and arbitrary CSV and TSV) files.
description:            This is an adjusted version and fork of the qsh package (https://github.com/itchyny/qhs).
extra-source-files:     README.md,
                        CHANGELOG.md

executable qjanno
  hs-source-dirs:       src
  main-is:              Main.hs
  ghc-options:          -threaded -Wall
  default-language:     Haskell2010
  other-modules:        Parser
                      , SQL
                      , SQLType
                      , File
                      , Option
                      , Paths_qjanno
                      , Janno
  build-depends:        base >= 4.9 && < 5
                      , containers
                      , optparse-applicative
                      , simple-sql-parser >= 0.6.0
                      , split
                      , sqlite-simple
                      , syb >= 0.4
                      , text
                      , directory
                      , filepath
                      , table-layout

test-suite spec
  hs-source-dirs:       test,src
  main-is:              Spec.hs
  ghc-options:          -threaded -Wall
  other-modules:        Parser
                      , SQL
                      , SQLType
                      , File
                      , Option
                      , Paths_qjanno
                      , ParserSpec
                      , SQLSpec
                      , FileSpec
                      , MainSpec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  build-depends:        base >= 4.9 && < 5
                      , containers
                      , hspec
                      , optparse-applicative
                      , process
                      , simple-sql-parser >= 0.6.0
                      , split
                      , sqlite-simple
                      , syb >= 0.4
                      , text
                      , filepath

source-repository head
  type:     git
  location: git@github.com:poseidon-framework/qjanno.git
